Bug 652931 - Proper handling of large mark stack insertion. r=billm